--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "prestart": "npm run build && npm run db:reset",
+    "prestart": "npm run build",
     "predev": "npm run build",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/server.ts",
     "start": "node ./dist/server.js",
@@ -22,9 +22,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.20.1",
-    "sequelize-cli": "^6.4.1"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
@@ -38,7 +36,6 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.1",
-    "@types/sequelize": "^4.28.13",
     "nodemon": "^2.0.16",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
