--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -9,7 +9,7 @@
     "predev": "npm run build",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/server.ts",
     "start": "node ./dist/server.js",
-    "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate  && npx sequelize-cli db:seed:all",
+    "db:reset": "npx prisma migrate reset --force --skip-generate",
     "compose:up:dev": "(cd ../.. && docker-compose -f docker-compose.yml up -d --build)",
     "compose:down:dev": "(cd ../.. && docker-compose -f docker-compose.yml down --remove-orphans)"
   },
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -37,6 +38,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.1",
     "nodemon": "^2.0.16",
+    "prisma": "^4.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
