--- a/backend/app/tsconfig.json
+++ b/backend/app/tsconfig.json
@@ -7,6 +7,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
+    "lib": ["esnext"],
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "baseUrl": ".",
     "forceConsistentCasingInFileNames": true,
