feat: adiciona rota de criação de usuario

--- a/backend/app/.env.example
+++ b/backend/app/.env.example
@@ -3,8 +3,4 @@ PORT=
 
 # Database variables
 
-DB_USER=
-DB_PASS=
-DB_HOST=
-DB_NAME=
-DB_PORT=
+DATABASE_URL="mysql://username:password@localhost:3306/register"
