--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -35,6 +35,7 @@
     "@tsconfig/node14": "^1.0.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.1",
