--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,18 @@ version: '3'
 
 services:
 
-  # frontend:
-  #   container_name: app_frontend
-  #   build: ./frontend
-  #   restart: 'always'
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - backend
+  frontend:
+    container_name: app_frontend
+    build: ./frontend
+    restart: 'always'
+    ports:
+      - 3000:3000
+    depends_on:
+      - backend
   backend:
     container_name: app_backend
     build: ./backend/app
     restart: 'always'
-    env_file:
-      - ./backend/app/.env
     ports:
       - 3001:3001
     command: npm run dev
@@ -25,9 +23,10 @@ services:
       - db
   db:
     image: mysql
-    container_name: db_mysql
+    restart: "always"
     ports:
       - 3306:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=123456
-    restart: 'always'
+      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_DATABASE: mysql
+      MYSQL_PASSWORD: mysql
