--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "prestart": "npm run build",
+    "prestart": "npm run build && npm run db:reset",
     "predev": "npm run build",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/server.ts",
     "start": "node ./dist/server.js",
