--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "prestart": "npm run build && npm run db:reset",
-    "predev": "npm run build",
+    "prestart": "npm run build",
+    "predev": "npm run build && npm run db:reset",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/server.ts",
     "start": "node ./dist/server.js",
     "db:reset": "npx prisma migrate reset --force --skip-generate",
