--- a/backend/app/.env.example
+++ b/backend/app/.env.example
@@ -3,10 +3,10 @@ PORT=
 
 # Database variables
 
-#Para usar o banco rodando local mudar a variavel no arquivo pisma/schema.prisma
+#Para usar o banco rodando local mudar a variavel no arquivo prisma/schema.prisma
 DATABASE_URL="mysql://username:password@localhost:3306/register"
 
-#Para usar o banco com docker mudar a variavel no arquivo pisma/schema.prisma
+#Para usar o banco com docker mudar a variavel no arquivo prisma/schema.prisma
 DATABASE_URL_DOCKER="mysql://username:password@mysql:3306/register"
 
 #JWT
