--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "prestart": "npm run build",
-    "predev": "npm run build",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/server.ts",
     "start": "node ./dist/server.js",
+    "predev": "npm run build && npm run db:reset",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/server.ts",
     "db:reset": "npx prisma migrate reset --force --skip-generate",
     "compose:up:dev": "(cd ../.. && docker-compose -f docker-compose.yml up -d --build)",
     "compose:down:dev": "(cd ../.. && docker-compose -f docker-compose.yml down --remove-orphans)"
