--- a/backend/app/.env.example
+++ b/backend/app/.env.example
@@ -3,10 +3,10 @@ PORT=3001
 
 # Database variables
 
-# Para usar o banco rodando local, mudar a variável no arquivo pisma/schema.prisma
+# Para usar o banco de dados local, mudar a variável no arquivo pisma/schema.prisma:
 DATABASE_URL="mysql://username:password@localhost:3306/nome_do_banco_de_dados"
 
-# Para usar o banco com docker, mudar a variável no arquivo pisma/schema.prisma
+# Para usar o banco de dados com docker, mudar a variável no arquivo pisma/schema.prisma:
 DATABASE_URL_DOCKER="mysql://username:password@nome_do_container:3306/nome_do_banco_de_dados"
 
 #JWT
