--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -8,7 +8,7 @@
     "prestart": "npm run build",
     "start": "node ./dist/server.js",
     "predev": "npm run build && npm run db:reset",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "db:reset": "npx prisma migrate reset --force --skip-generate",
     "compose:up:dev": "(cd ../.. && docker-compose -f docker-compose.yml up -d --build)",
     "compose:down:dev": "(cd ../.. && docker-compose -f docker-compose.yml down --remove-orphans)"
@@ -35,7 +35,6 @@
     "@tsconfig/node14": "^1.0.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.1",
