--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,4 @@ services:
       - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: mysql
-      MYSQL_PASSWORD: mysql
+      TZ: 'America/Sao_Paulo'
