--- a/backend/app/tsconfig.json
+++ b/backend/app/tsconfig.json
@@ -19,7 +19,8 @@
     "skipLibCheck": true,
     "paths": {
       "*": ["node_modules/*"]
-    }
+    },
+    "typeRoots" : ["src/@types", "./node_modules/@types"]
   },
   "include": ["src/**/*"],
   "exclude": ["src/tests"]
