--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     restart: 'always'
     ports:
       - 3000:3000
+    command: npm run dev
     depends_on:
       - backend
   backend:
